# Nmap Changelog ($Id$); -*-text-*-

o Integrated several service match lines from Tom Sellers.

o An error was fixed where Zenmap would crash when trying to load from
  the recent scans database a file containing non-ASCII characters. The
  error looked like
    pysqlite2.dbapi2.OperationalError: Could not decode to UTF-8 column
      'nmap_xml_output' with text
    '<?xml version="1.0" encoding="iso-8859-1"?>
    <nmaprun profile="nmap -T Aggressive -n -v %s" scanner="nmap" hint=""
  The error would be seen when such a scan was found in using the search
  interface. [David]

o Install icons and pixmaps under /usr/share/zenmap/{icons,pixmaps} 
  so they don't get mixed in with the files in /usr/share/{icons,pixmaps}.
  [Jurand Nogiec]

o Modification to handle the problem where if a user modifies the 
  command entry field, Zenmap does not necessarily execute this command 
  and instead it will follow what the Target/Entry fields specify 
  instead. This avoids a bug where if you edited a command, then selected 
  a different target, the edited command line would be replaced with one 
  from the currently selected profile. [Jurand Nogiec]

o Fixed the nmap_command_path bug in Zenmap. The variable now actually
  accesses the nmap_command_path in zenmap.conf file. It is accessed
  by a new class in UmitConf called PathsConfig, which represents the
  [paths] section in zenmap.conf. [Jurand Nogiec]

o Added a new NSE Comm library for common network discovery tasks such
  as banner-grabbing (get_banner()) and making a quick exchange of data
  (exchange()).  16 scripts were updated to use this library. [Kris]

o Fixed a bug which caused -PN to erronously bail out for unprivileged
  users.  Thanks to Jabra (jabra(a)spl0it.org) for the report. [Kris]

o Fixed an integer overflow which prevented a target specification
  of "*.*.*.*" from working.  Support for the CIDR /0 is now also
  available. [Kris]

o Fixed some memory leaks in NSE found with Valgrind. [Kris]
